recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:12: error: Unit does not take parameters
run(){
     ^